--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
       </div>
     </div>
   </header>
+<!--ButtonHolder-->
 
+
+<!--ButtonHolder-->
         <!--Foodtruck-->
   <section id="fantasticFoodtruck" class="panel fondo__dark">
     <div class="composicion1__barraMenuHome fondo__dark"></div>
@@ -616,15 +619,32 @@
         <div class="home__experience pt-5 mt-3 px-4 px-lg-0">
           <h2 class="hero__subtitulo-1">Experience</h2>
           <div class="home__experience-job d-flex align-items-start mb-5">
+            <img class="home__experience-logo" src="assets/img/Icons/SeismicSquirrelLogo.jpg" alt="">
+            <div class="home__experience-textContainer ml-3 pl-5">
+              <p class="articulo__parrafo-1 pt-4 pt-lg-5"> <b>UX/UI Designer</b> at <b>Seismic Squirrel</b></p>
+              <p class="articulo__parrafo-1 pt-1">October 2022 - Present</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UX/UI Designer for their upcoming project "Aether&Iron"</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Worked on the UX and UI design of multiple iterations of the project, iterating and refining based on user feedback.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Designed documentation for various aspects of the project, including product fit, target demographics, heuristics, and core UX principles.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Conducted both internal playtests and user research surveys to inform design decisions.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Designed user flows and the overall information architecture of the game, ensuring a cohesive and intuitive user experience.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Conducted experience research on multiple aspects and features of the project to ensure that the design met the needs and expectations of users.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Designed the UI for multiple screens, starting from wireframe designs and iterating up to final implementation in Unity.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Collaborated with the game designer to create new features for the game, ensuring they were designed with the user's needs in mind.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Designed and updated the UX and UI style guides of the project, ensuring consistency and coherence throughout the game.</p>
+              <p class="articulo__parrafo-1 pt-4 mt-3 pt-lg-1">As the sole UX/UI Designer at Seismic Squirrel, I was responsible for overseeing the entire user experience for their upcoming game. The studio includes individuals with years of experience, making it a unique opportunity for me to work alongside industry veterans. This position challenged me to become a more proactive and autonomous professional with a full understanding of the UX/UI process. I worked collaboratively with other disciplines, such as game design, to provide support from a UX perspective. My work involved the entire UX/UI process, from research to final implementation in Unity. This experience allowed me to gain invaluable skills and become a more confident and independent UX/UI Designer, while also developing a deeper understanding of the end-to-end design process.</p>
+            </div>
+          </div>
+          <div class="home__experience-job d-flex align-items-start mb-5">
             <img class="home__experience-logo" src="assets/img/Icons/osmo-logo.png" alt="">
             <div class="home__experience-textContainer ml-3 pl-5">
               <p class="articulo__parrafo-1 pt-4 pt-lg-5"> <b>UX/UI Designer</b> at <b>Osmo Chile</b></p>
-              <p class="articulo__parrafo-1 pt-1">November 2020 - Present</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">UX/UI Designer and artist for Squiggle Magic special content</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">UX/UI Designer and artist for Math wizard and the Fantastic Foodtruck</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">UI artist for Little Genius Kit ABC's special content</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">UX/UI Designer and artist for Genius Tangram redesign</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">Osmo is the award-winning STEAM brand and creator of a broad universe of hands-on gamified learning experiences validated by education experts that nourish children's mind. My role in the company meant working on different projects, facing the challenges not only imposed by their young target audience, but also their innovative control systems and technology. My work within those projects lead to making 2 of those games to become some of the games with the best NPS at the company. </p>
+              <p class="articulo__parrafo-1 pt-1">November 2020 - September 2022</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UX/UI Designer and artist for Squiggle Magic special content</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UX/UI Designer and artist for Math wizard and the Fantastic Foodtruck</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UI artist for Little Genius Kit ABC's special content</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UX/UI Designer and artist for Genius Tangram redesign</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1 mt-3">As a UX/UI Designer at Osmo, I contributed to a variety of projects that involved developing hands-on, gamified learning experiences for children. My work required me to overcome unique challenges posed by our young target audience and innovative control systems and technology. I collaborated with cross-functional teams, including designers, engineers, and educators, to ensure that each game was optimized for both learning outcomes and user engagement. During my time at Osmo, I led the development of two games that became some of the company's top-performing products, as measured by Net Promoter Score (NPS). My experience at Osmo allowed me to hone my skills in STEAM product development, and I am excited to bring my innovative ideas to my next role.</p>
             </div>
           </div>
           <div class="home__experience-job d-flex align-items-start mb-5">
@@ -632,9 +652,9 @@
             <div class="home__experience-textContainer ml-3 pl-5">
               <p class="articulo__parrafo-1"> <b>Game designer</b> and <b>Graphic designer</b> at <b>Niebla Games</b></p>
               <p class="articulo__parrafo-1 pt-1">May 2016 - August 2016</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">Game designer for Causa: Voices of the dusk initial prototypes </p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">Graphic designer for Careta: un juego de sumas, restas y artimañas board game</p>
-              <p class="articulo__parrafo-1 pt-1 pt-4 pt-lg-1">Niebla games is one of the most prominent Indie game studios outside of the capital in Chile and a licenced partner of Sony Interactive Entertainment and Microsoft Corporation. Initially brought in for an internship, i got hired afterwards to help on the graphic design of their first tabletop game. </p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Game designer for Causa: Voices of the dusk initial prototypes </p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Graphic designer for Careta: un juego de sumas, restas y artimañas board game</p>
+              <p class="articulo__parrafo-1 pt-1 pt-4 pt-lg-1 mt-3">During my time as a graphic designer at Niebla Games, I contributed to the design of the company's first tabletop game. As an intern, my talent and dedication quickly led to my hiring. My work involved creating visually engaging graphics, including logos, character designs, and packaging, and collaborating with game designers, artists, and production teams to ensure the final product met quality standards. This experience allowed me to develop my graphic design skills in a dynamic and fast-paced environment, balancing creative freedom with client expectations and finding creative solutions to design challenges. I am proud to have contributed to the success of the company's first tabletop game and am excited to leverage my skills and experience in future graphic design roles. </p>
             </div>
           </div>
           <div class="home__experience-job d-flex align-items-start mb-5">
@@ -642,8 +662,8 @@
             <div class="home__experience-textContainer ml-3 pl-5">
               <p class="articulo__parrafo-1"> <b>Game designer</b> and <b>UI Artist</b> at <b>IDK Games</b></p>
               <p class="articulo__parrafo-1 pt-1">January 2015 - July 2017</p>
-              <p class="articulo__parrafo-1 pt-4 pt-lg-1">UI Designer and Game Designer for Barbacteria's Oddysey</p>
-              <p class="articulo__parrafo-1 pt-1 pt-4 pt-lg-1">Indie company, i couldn't manage to get a game fully launched, however the knowledge and abilities i acquired through this experience are what later let me continue my career on the Videogame industry.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UI Designer and Game Designer for Barbacteria's Oddysey</p>
+              <p class="articulo__parrafo-1 pt-1 pt-4 pt-lg-1 mt-3">As an indie game developer, I faced the challenge of trying to launch a game with limited resources and support. Although the game was not fully launched, I gained valuable experience in game development that helped me to build a solid foundation for my future career. During this time, I learned to manage my time and resources effectively, prioritize tasks, and make difficult decisions. I worked on all aspects of the game development process, from concept to design to programming, honing my skills in programming, game design, and project management. This experience allowed me to continue my career in the video game industry with confidence, armed with a deep understanding of the challenges and rewards of game development.</p>
             </div>
           </div>
         </div>
