Added joyride and entropy unit to index

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="info col-lg-4">
         <h2 class="home__tituloAbout px-4 px-lg-0">About me</h2>
         <p class="articulo__parrafo-1 px-4 px-lg-0">As a designer, I am passionate about making games as I believe they represent the purest form of experience design. The fine-tuning required in every detail of a game is essential in delivering an enjoyable and entertaining experience.</p>
-          <p class="articulo__parrafo-1 pt-3 px-4 px-lg-0">I completed my BA degree in Integral Design at the <a href="https://www.uv.cl" target="_blank">University of Valparaiso</a> in Chile and later specialized in UX/UI Design through the <a href="https://talentodigitalparachile.cl">Talento Digital program</a>sponsored by Sence and <a href="https://desafiolatam.com">Desafio Latam academy</a>. Even before starting my professional journey, I knew I wanted to work in the videogame industry, so I acquired many skills and knowledge as a self-taught professional in game design and UX/UI design. This experience helped me not only to secure my current position but also to become a self-sufficient, proactive, organized, and thorough professional capable of adapting to different work environments. Therefore, I highly value places where I can be in a constant state of learning, looking for different challenges and more ways to grow as a professional.</p>
+          <p class="articulo__parrafo-1 pt-3 px-4 px-lg-0">I completed my BA degree in Integral Design at the <a href="https://www.uv.cl" target="_blank">University of Valparaiso</a> in Chile and later specialized in UX/UI Design through the <a href="https://talentodigitalparachile.cl">Talento Digital program</a> sponsored by Sence and <a href="https://desafiolatam.com">Desafio Latam academy</a>. Even before starting my professional journey, I knew I wanted to work in the videogame industry, so I acquired many skills and knowledge as a self-taught professional in game design and UX/UI design. This experience helped me not only to secure my current position but also to become a self-sufficient, proactive, organized, and thorough professional capable of adapting to different work environments. Therefore, I highly value places where I can be in a constant state of learning, looking for different challenges and more ways to grow as a professional.</p>
         <div class="d-flex justify-content-around pt-4">
           <a class="aboutIcons" href="https://www.linkedin.com/in/thomasheimrojas/"><i class="fa-brands fa-linkedin-in fa-9x"></i></a>
           <a class="aboutIcons" href="assets/Thomas Heim - Resume.pdf" target="_blank"><i class="fa-solid fa-file-pdf fa-9x"></i></a>
@@ -167,10 +167,29 @@
         <div class="home__experience pt-5 mt-3 px-4 px-lg-0">
           <h2 class="hero__subtitulo-1">Experience</h2>
           <div class="home__experience-job d-flex align-items-start mb-5">
+            <img class="home__experience-logo pt-lg-5" src="assets/img/Icons/entropy_logo_black.png" alt="">
+            <div class="home__experience-textContainer ml-3 pl-5">
+              <p class="articulo__parrafo-1 pt-4 pt-lg-5"> <b>UX/UI Lead</b> at <b>Entropy Unit</b></p>
+              <p class="articulo__parrafo-1 pt-1">January 2024 - Current</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Vow of Nazca is an independent project made in collaboration with peers i've met alongside my journey in the industry.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• As the lead on the project, i work on every aspect of the user experience and interface, including conceptualization, architecture, visual design and implementation into Unreal Engine.</p>
+            </div>
+          </div>
+          <div class="home__experience-job d-flex align-items-start mb-5">
+            <img class="home__experience-logo pt-3" src="assets/img/Icons/Joyride_logo_black.png" alt="">
+            <div class="home__experience-textContainer ml-3 pl-5">
+              <p class="articulo__parrafo-1 pt-4 pt-lg-5"> <b>UX/UI Designer</b> at <b>Joyride Games</b></p>
+              <p class="articulo__parrafo-1 pt-1">June 2023 - April 2024</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Worked in the redesign of the ui for their flagship franchise, Super Champs Racket Rampage.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Updated various existing designs and layouts for various screens with the help of the art and design teams.</p>
+              <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Created and strucutred the FTUE flows for new player experience as well as new game features.</p>
+            </div>
+          </div>
+          <div class="home__experience-job d-flex align-items-start mb-5">
             <img class="home__experience-logo" src="assets/img/Icons/SeismicSquirrelLogo.jpg" alt="">
             <div class="home__experience-textContainer ml-3 pl-5">
               <p class="articulo__parrafo-1 pt-4 pt-lg-5"> <b>UX/UI Designer</b> at <b>Seismic Squirrel</b></p>
-              <p class="articulo__parrafo-1 pt-1">October 2022 - Present</p>
+              <p class="articulo__parrafo-1 pt-1">October 2022 - December 2023</p>
               <p class="articulo__parrafo-1 pt-4 pt-lg-1">• UX/UI Designer for their upcoming project "Aether&Iron"</p>
               <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Worked on the UX and UI design of multiple iterations of the project, iterating and refining based on user feedback.</p>
               <p class="articulo__parrafo-1 pt-4 pt-lg-1">• Designed documentation for various aspects of the project, including product fit, target demographics, heuristics, and core UX principles.</p>
