--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <a class="nav-link navegacion__contenido-link" href="Alvea.html">Alvea</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link navegacion__contenido-link" href="Joyride.html">Racket Rampage</a>
+          </li>
+            <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Illustration</a>
             </li>
         </ul>
@@ -116,6 +119,14 @@
                 <a href="FantasticFoodtruck.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Foodtruck_Banner.jpg" alt="">
                   <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Math Wizard and the Fantastic Foodtruck</div>
+                </a>
+              </div>
+            </div>
+            <div class="row justify-content-center pb-1 pb-lg-5">
+              <div class="col-lg-6 d-flex justify-content-center">
+                <a href="Joyride.html">
+                  <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/RacketRampage_Banner.jpg" alt="">
+                  <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Racket Rampage</div>
                 </a>
               </div>
             </div>
