--- a/Alvea.html
+++ b/Alvea.html
@@ -64,6 +64,9 @@
             <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="Squiggle.html">Squiggle Magic</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link navegacion__contenido-link" href="Joyride.html">Racket Rampage</a>
+          </li>
            <!--<li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="Alvea.html">Alvea</a>
             </li>-->
