--- a/Tangram.html
+++ b/Tangram.html
@@ -68,6 +68,9 @@
                 <a class="nav-link navegacion__contenido-link" href="Alvea.html">Alvea</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link navegacion__contenido-link" href="Joyride.html">Racket Rampage</a>
+          </li>
+            <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Illustration</a>
             </li>
         </ul>
