--- a/AetherIron.html
+++ b/AetherIron.html
@@ -59,7 +59,7 @@
                 <a class="nav-link navegacion__contenido-link" href="Tangram.html">Tangram</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link navegacion__contenido-link" href="Squiggle.html">Squiggle Magic</a>
+                <a class="nav-link navegacion__contenido-link" href="vowofnazca.html">Vow of Nazca</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="Alvea.html">Alvea</a>
