--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a class="nav-link navegacion__contenido-link" href="Tangram.html">Tangram</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link navegacion__contenido-link" href="Squiggle.html">Squiggle Magic</a>
+                <a class="nav-link navegacion__contenido-link" href="vowofnazca.html">Vow of Nazca</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="Alvea.html">Alvea</a>
@@ -106,7 +106,31 @@
           <div class="composicion1__barraMenuHome fondo__dark"></div>
           <div class="container-fluid pb-5">  
               <!--Intro-->
-            <div class="row justify-content-center pb-1 pb-lg-5">
+              <div class="row justify-content-center pb-1 pb-lg-5">
+                <div class="col-lg-6 d-flex justify-content-center">
+                  <a href="vowofnazca.html">
+                    <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/VoN_Banner.jpg" alt="">
+                    <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Vow of Nazca</div>
+                  </a>
+                </div>
+              </div>  
+              <div class="row justify-content-center pb-1 pb-lg-5">
+                <div class="col-lg-6 d-flex justify-content-center">
+                  <a href="FantasticFoodtruck.html">
+                    <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Foodtruck_Banner.jpg" alt="">
+                    <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Math Wizard and the Fantastic Foodtruck</div>
+                  </a>
+                </div>
+              </div>
+              <div class="row justify-content-center pb-1 pb-lg-5">
+                <div class="col-lg-6 d-flex justify-content-center">
+                  <a href="Tangram.html">
+                    <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Tangram_Banner.jpg" alt="">
+                    <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Tangram redesign</div>
+                  </a>
+                </div>
+              </div>
+              <div class="row justify-content-center pb-1 pb-lg-5">
               <div class="col-lg-6 d-flex justify-content-center">
                 <a href="AetherIron.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/AE_Banner.jpg" alt="">
@@ -116,33 +140,9 @@
             </div>  
             <div class="row justify-content-center pb-1 pb-lg-5">
               <div class="col-lg-6 d-flex justify-content-center">
-                <a href="FantasticFoodtruck.html">
-                  <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Foodtruck_Banner.jpg" alt="">
-                  <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Math Wizard and the Fantastic Foodtruck</div>
-                </a>
-              </div>
-            </div>
-            <div class="row justify-content-center pb-1 pb-lg-5">
-              <div class="col-lg-6 d-flex justify-content-center">
                 <a href="Joyride.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/RacketRampage_Banner.jpg" alt="">
                   <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Racket Rampage</div>
-                </a>
-              </div>
-            </div>
-            <div class="row justify-content-center pb-1 pb-lg-5">
-              <div class="col-lg-6 d-flex justify-content-center">
-                <a href="Tangram.html">
-                  <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Tangram_Banner.jpg" alt="">
-                  <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Tangram redesign</div>
-                </a>
-              </div>
-            </div>
-            <div class="row justify-content-center pb-1 pb-lg-5">
-              <div class="col-lg-6 d-flex justify-content-center">
-                <a href="Squiggle.html">
-                  <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Squiggle_Banner.jpg" alt="">
-                  <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Squiggle Magic</div>
                 </a>
               </div>
             </div>
