Added ELVTR section in portfolio
(Still need to fix top bar links, im figuring out what to cut)

--- a/index.html
+++ b/index.html
@@ -108,7 +108,15 @@
               <!--Intro-->
               <div class="row justify-content-center pb-1 pb-lg-5">
                 <div class="col-lg-6 d-flex justify-content-center">
-                  <a href="vowofnazca.html">
+                  <a class="d-flex justify-content-center" href="elvtr.html">
+                    <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/ELVTR_Banner.jpg" alt="">
+                    <div class="home__tituloBanner titulo__banner mx-auto text-wrap">ELVTR Case Study</div>
+                  </a>
+                </div>
+              </div>  
+              <div class="row justify-content-center pb-1 pb-lg-5">
+                <div class="col-lg-6 d-flex justify-content-center">
+                  <a class="d-flex justify-content-center" href="vowofnazca.html">
                     <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/VoN_Banner.jpg" alt="">
                     <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Vow of Nazca</div>
                   </a>
@@ -116,7 +124,7 @@
               </div>  
               <div class="row justify-content-center pb-1 pb-lg-5">
                 <div class="col-lg-6 d-flex justify-content-center">
-                  <a href="FantasticFoodtruck.html">
+                  <a class="d-flex justify-content-center" href="FantasticFoodtruck.html">
                     <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Foodtruck_Banner.jpg" alt="">
                     <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Math Wizard and the Fantastic Foodtruck</div>
                   </a>
@@ -124,7 +132,7 @@
               </div>
               <div class="row justify-content-center pb-1 pb-lg-5">
                 <div class="col-lg-6 d-flex justify-content-center">
-                  <a href="Tangram.html">
+                  <a class="d-flex justify-content-center" href="Tangram.html">
                     <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Tangram_Banner.jpg" alt="">
                     <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Tangram redesign</div>
                   </a>
@@ -132,7 +140,7 @@
               </div>
               <div class="row justify-content-center pb-1 pb-lg-5">
               <div class="col-lg-6 d-flex justify-content-center">
-                <a href="AetherIron.html">
+                <a class="d-flex justify-content-center" href="AetherIron.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/AE_Banner.jpg" alt="">
                   <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Aether&Iron</div>
                 </a>
@@ -140,7 +148,7 @@
             </div>  
             <div class="row justify-content-center pb-1 pb-lg-5">
               <div class="col-lg-6 d-flex justify-content-center">
-                <a href="Joyride.html">
+                <a class="d-flex justify-content-center" href="Joyride.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/RacketRampage_Banner.jpg" alt="">
                   <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Racket Rampage</div>
                 </a>
@@ -148,7 +156,7 @@
             </div>
             <div class="row justify-content-center pb-1 pb-lg-5">
               <div class="col-lg-6 d-flex justify-content-center">
-                <a href="Alvea.html">
+                <a class="d-flex justify-content-center" href="Alvea.html">
                   <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/Alvea_Banner.jpg" alt="">
                   <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Alvea: legend of the windwhisperers</div>
                 </a>
