Added ELVTR to navigation tree

--- a/Alvea.html
+++ b/Alvea.html
@@ -56,6 +56,9 @@
               <a class="nav-link navegacion__contenido-link" href="AetherIron.html">Aether&Iron</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link navegacion__contenido-link" href="elvtr.html">ELVTR</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="FantasticFoodtruck.html">Fantastic Foodtruck</a>
             </li>
             <li class="nav-item">
