--- a/FantasticFoodtruck.html
+++ b/FantasticFoodtruck.html
@@ -59,6 +59,9 @@
                 <a class="nav-link navegacion__contenido-link homeSelected" href="FantasticFoodtruck.html">Fantastic Foodtruck</a>
             </li>-->
             <li class="nav-item">
+              <a class="nav-link navegacion__contenido-link" href="elvtr.html">ELVTR</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link navegacion__contenido-link" href="Tangram.html">Tangram</a>
             </li>
             <li class="nav-item">
