Added ELVTR Advanced case study to index
Still needs to be added to top bar

--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
               <!--Intro-->
               <div class="row justify-content-center pb-1 pb-lg-5">
                 <div class="col-lg-6 d-flex justify-content-center">
+                  <a class="d-flex justify-content-center" href="elvtrAdvanced.html">
+                    <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/ELVTRAdvanced_Banner.jpg" alt="">
+                    <div class="home__tituloBanner titulo__banner mx-auto text-wrap">Call of Duty Case study</div>
+                  </a>
+                </div>
+              </div>  
+              <div class="row justify-content-center pb-1 pb-lg-5">
+                <div class="col-lg-6 d-flex justify-content-center">
                   <a class="d-flex justify-content-center" href="elvtr.html">
                     <img class="home__img pt-4 pt-lg-0" src="assets/img/ButtonHolder/ELVTR_Banner.jpg" alt="">
                     <div class="home__tituloBanner titulo__banner mx-auto text-wrap">ELVTR Case Study</div>
